--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "electron": "^29.2.0"
   },
   "dependencies": {
-    "node-forge": "^1.3.1",
-    "openssl": "^2.0.0"
+    "node-forge": "^1.3.1"
   }
 }
