--- a/package.json
+++ b/package.json
@@ -1,18 +1,36 @@
 {
   "name": "cert-client",
   "version": "1.0.0",
-  "description": "",
+  "description": "Conversor de certificado digital",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
+  },
+  "build": {
+    "appId": "com.tecnospeed.certclient",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "*"
+    ],
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": "snap"
+    }
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^29.2.0"
+    "electron": "^29.2.0",
+    "electron-builder": "^24.13.3"
   },
   "dependencies": {
-    "node-forge": "^1.3.1",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "node-forge": "^1.3.1"
   }
 }
