--- a/package.json
+++ b/package.json
@@ -5,32 +5,48 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder"
-  },
-  "build": {
-    "appId": "com.tecnospeed.certclient",
-    "directories": {
-      "output": "dist"
-    },
-    "files": [
-      "*"
-    ],
-    "win": {
-      "target": "nsis"
-    },
-    "linux": {
-      "target": "snap"
-    }
+    "build": "electron-builder"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^29.2.0",
+    "electron": "^29.4.2",
     "electron-builder": "^24.13.3"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
     "node-forge": "^1.3.1"
+  },
+  "build": {
+    "appId": "com.certclient",
+    "productName": "CertClient",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "main.js",
+      "index.js",
+      "preload.js",
+      "dialog.js",
+      "dialog.html",
+      "dialog.css",
+      "index.html",
+      "index.css",
+      "services.js",
+      "README.md",
+      "global/**/*",
+      "imagem/**/*",
+      "tipo-certificado/**/*",
+      "upload/**/*"
+    ],
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": "AppImage"
+    },
+    "mac": {
+      "target": "dmg"
+    }
   }
 }
